Update SelectorOps to use new poller mode